# CMake_Tutorial

cookbook/chapter-01/recipe-01/cxx-example/: sysinfor.txt
cookbook/chapter-01/recipe-03/cxx-example/: CMakeLists.txt
